--- a/index.html
+++ b/index.html
@@ -36,11 +36,88 @@
         </nav>
         <a href="" class="nav__link nav__link--contact">contact</a>
 
-        <button class="mobile-menu__btn--open">
-          <svg class="mobile-menu__icon--open" width="21px" height="13px">
+        <button class="mob-menu__btn--open">
+          <svg class="mob-menu__icon--open" width="21px" height="13px">
             <use href="./images/symbol-defs.svg#icon-burger"></use>
           </svg>
         </button>
+
+        <div class="mob-menu-container">
+          <a href="/index.html" lang="en" class="logo header__logo">
+            <span class="logo-letter">M</span>
+            <span class="logo-letter">O</span></a
+          >
+          <button class="mob-menu__btn--close">
+            <svg class="mob-menu__icon--close" width="32px" height="32px">
+              <use href="./images/symbol-defs.svg#icon-close"></use>
+            </svg>
+          </button>
+          <div class="mob-menu">
+            <nav class="mob-nav">
+              <ul class="mob-nav__list">
+                <li class="mob-nav__item">
+                  <a href="#" class="mob-nav__link mob-nav__link--current">home</a>
+                </li>
+                <li class="mob-nav__item"><a href="#" class="mob-nav__link">about</a></li>
+                <li class="mob-nav__item"><a href="#" class="mob-nav__link">service</a></li>
+                <li class="mob-nav__item"><a href="#" class="mob-nav__link">portfolio</a></li>
+              </ul>
+            </nav>
+            <div class="mob-contacts">
+              <ul class="socials mob-socials">
+                <li class="socials__item">
+                  <a
+                    class="socials__item-link link"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    <svg class="socials__item-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a
+                    class="socials__item-link link"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    <svg class="socials__item-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-github1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a
+                    class="socials__item-link link"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    <svg class="socials__item-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a
+                    class="socials__item-link link"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    <svg class="socials__item-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+              <a href="" class="mob-nav__link mob-nav__link--contact">contact</a>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <main class="main">
@@ -339,7 +416,6 @@
       </section>
       <section class="testimonial section">
         <div class="container">
-          <h2 class="title"><span class="title-accent">04</span>testomonial</h2>
           <div class="testimonial__content">
             <img
               src="./images/testomonial.jpg"
@@ -348,16 +424,21 @@
               alt=""
               class="testimonial__image"
             />
-            <div class="testimonial__info">
-              <p class="testimonial__text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-                officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
-                amet.
-              </p>
-              <p class="testimonial__author">
-                <span class="testimonial__name">Esther Howard</span><br />CEO of Adebe
-              </p>
-              <ul class="pagination">
+            <div class="testimonial__wrapper">
+              <h2 class="title testimonial__title">
+                <span class="title-accent">04</span>testomonial
+              </h2>
+              <div class="testimonial__info">
+                <p class="testimonial__text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                  officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                  nostrud amet.
+                </p>
+                <p class="testimonial__author">
+                  <span class="testimonial__name">Esther Howard</span><br />CEO of Adebe
+                </p>
+              </div>
+              <ul class="pagination pagination--to-end">
                 <li class="pagination-item">
                   <button class="pagination-btn">
                     <svg class="pagination-icon" width="20" height="20">
@@ -421,58 +502,56 @@
               </li>
             </ul>
           </address>
-          <div class="footer__socials">
-            <ul class="socials">
-              <li class="socials__item">
-                <a
-                  class="socials__item-link link"
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                >
-                  <svg class="socials__item-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-telegram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials__item">
-                <a
-                  class="socials__item-link link"
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                >
-                  <svg class="socials__item-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-github1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials__item">
-                <a
-                  class="socials__item-link link"
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                >
-                  <svg class="socials__item-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials__item">
-                <a
-                  class="socials__item-link link"
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                >
-                  <svg class="socials__item-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="socials">
+            <li class="socials__item">
+              <a
+                class="socials__item-link link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials__item-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a
+                class="socials__item-link link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials__item-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-github1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a
+                class="socials__item-link link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials__item-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a
+                class="socials__item-link link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials__item-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
         <div class="form-wrapper">
           <b class="form-info"
@@ -480,27 +559,29 @@
             <span class="form-info--accent">product design work</span> or partnership</b
           >
           <form class="form">
-            <div class="form-field">
-              <label for="name" class="form-label">Your name*</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="form-input"
-                placeholder="Enter your name here"
-                required
-              />
-            </div>
-            <div class="form-field">
-              <label for="email" class="form-label">Email Address*</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-                class="form-input"
-                placeholder="Enter your email address"
-                required
-              />
+            <div class="form-fields">
+              <div class="form-field">
+                <label for="name" class="form-label">Your name*</label>
+                <input
+                  type="text"
+                  name="name"
+                  id="name"
+                  class="form-input"
+                  placeholder="Enter your name here"
+                  required
+                />
+              </div>
+              <div class="form-field">
+                <label for="email" class="form-label">Email Address*</label>
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  class="form-input"
+                  placeholder="Enter your email address"
+                  required
+                />
+              </div>
             </div>
             <div class="form-field">
               <label for="message" class="form-label">Message</label>
@@ -512,7 +593,6 @@
                 required
               ></textarea>
             </div>
-
             <button type="submit" class="form-button button">send message</button>
           </form>
         </div>
